# codeframe-aco

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  NEXT_AGENT_PROMPT.md  PHASE3_HANDOFF.md  README.md  pyproject.toml
.beads/: issues.jsonl
.claude/: settings.local.json
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
docs/: codeframe-aco-spec.md  feature-breakdown.md  x-coordinate-refactoring-design.md
examples/: discover_gaps.py  manage_dag.py  plan_work.py  select_task.py  track_progress.py
scripts/: example_issue_mapping.json  migrate_x_coordinates.py
specs/001-vector-memory/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-vector-memory/checklists/: requirements.md
specs/001-vector-memory/contracts/: memory-api.md
specs/002-beads-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-beads-integration/contracts/: beads_client_api.py
src/beads/: __init__.py  client.py  exceptions.py  models.py  utils.py
src/vector_memory/: __init__.py  coordinate.py  exceptions.py  manager.py  persistence.py  query.py  storage.py  validation.py
tests/: conftest.py
tests/integration/: test_concurrent_access.py  test_dag_ordering.py  test_dependencies.py  test_end_to_end.py  test_fixtures.py  test_git_sync.py  test_issue_crud.py  test_queries.py  test_quickstart_examples.py  test_success_criteria.py
tests/performance/: test_benchmarks.py
tests/property/: test_coordinate_properties.py  test_partial_order_properties.py
tests/unit/: test_client.py  test_coordinate.py  test_exceptions.py  test_manager.py  test_models.py  test_query.py  test_storage.py  test_utils.py  test_validation.py
